erDiagram
    POSTS ||--|{ COMMENTS : has
    POSTS ||--|{ LIKES : has

    POSTS {
        int id PK
        int user_id FK
        string content
        datetime created_at
    }
    
    COMMENTS {
        int id PK
        int post_id FK
        int user_id FK
        string text
        datetime created_at
    }
    
    LIKES {
        int id PK
        int post_id FK
        int user_id FK
    }
